tests/paczka1/fuzzy1/55379537.err
Error in line 3: V1KwRt1E S131 55,9
Error in line 6: V1KwRt1E A655 92,6
Error in line 14: S437 A655 211,82
Error in line 9: V1KwRt1E S437 41,1
Error in line 13: yz6t S437 6,9
Error in line 12: S437 A655 85,5
Error in line 33: S43B S43B 35,4
